WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209065
[macOS] Accessibility sandbox regressions
https://bugs.webkit.org/show_bug.cgi?id=209065
Summary
[macOS] Accessibility sandbox regressions
Per Arne Vollan
Reported
2020-03-13 10:42:48 PDT
When Accessibility is enabled, the WebContent process needs access to the preference service, since Accessibility is relying on some advanced features of the service.
Attachments
Patch
(9.19 KB, patch)
2020-03-13 13:45 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(9.55 KB, patch)
2020-03-13 14:20 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-03-13 10:43:09 PDT
rdar://problem/60202450
Per Arne Vollan
Comment 2
2020-03-13 13:45:46 PDT
Created
attachment 393523
[details]
Patch
Per Arne Vollan
Comment 3
2020-03-13 14:20:24 PDT
Created
attachment 393529
[details]
Patch
Brent Fulgham
Comment 4
2020-03-14 16:33:13 PDT
Comment on
attachment 393529
[details]
Patch r=me
Per Arne Vollan
Comment 5
2020-03-16 14:12:14 PDT
Committed
r258518
: <
https://trac.webkit.org/changeset/258518/webkit
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug